syntax = "proto2";

package dataplane;

import "cloud/disk_manager/internal/pkg/dataplane/snapshot/config/config.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/config";

////////////////////////////////////////////////////////////////////////////////

message DataplaneConfig {
    required snapshot.SnapshotConfig SnapshotConfig = 1;

    optional uint32 ReaderCount = 2 [default = 10];
    optional uint32 WriterCount = 3 [default = 10];
    optional uint32 ChunksInflightLimit = 4 [default = 100];

    optional string SnapshotCollectionTimeout = 5 [default = "30m"];
    optional string CollectSnapshotsTaskScheduleInterval = 6 [default = "1m"];
    optional uint32 SnapshotCollectionInflightLimit = 7 [default = 10];

    optional uint32 CreateSnapshotFromURLReaderCount = 8 [default = 10];
    optional string HTTPClientTimeout = 9 [default = "60s"];
    optional string HTTPClientMinRetryTimeout = 10 [default = "1s"];
    optional string HTTPClientMaxRetryTimeout = 11 [default = "8s"];
    optional uint32 HTTPClientMaxRetries = 12 [default = 5];

    optional string CollectSnapshotMetricsTaskScheduleInterval = 13 [default = "10m"];
    optional string SnapshotMetricsCollectionInterval = 14 [default = "1m"];

    // Abort replication if SecondsRemaining degrades in X iterations.
    optional uint32 UselessReplicationIterationsBeforeAbort = 15 [default = 100];

    optional string ProxyOverlayDiskIdPrefix = 16 [default = "proxy-"];
}
